# snitch

./: .clang-format  .clang-format-ignore  .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .yamlignore  .yamllint  404.html  Bender.local  CONTRIBUTING.md  Makefile  README.md  apt-requirements.txt  doxybook2.json  index.html  mkdocs.yml  python-requirements.txt  setup.cfg  sitemap.xml
banshee/: CHANGELOG.md  Cargo.toml  Makefile  README.md
banshee/src/: engine.rs  main.rs  riscv.rs  runtime.ll  runtime.rs  softfloat.rs  tran.rs  util.rs
banshee/src/runtime/: common.rs  jit.ll  jit.rs  mod.rs
banshee/tests/: Makefile  barrier.c  dma_simple.c  dummy.s  far_jump.s  frep_multiple.c  frep_single.c  large_lfsr.c  loads.s  matmul_baseline.c  matmul_ssr.c  matmul_ssr_frep.c  multi_cluster.s  multi_core.s  stores.s  unpred_jr_1.s  unpred_jr_2.s
banshee/tests/args/: matmul_baseline
banshee/tests/dump/: barrier.dump  frep_multiple.dump  frep_single.dump  large_lfsr.dump  matmul_baseline.dump  matmul_ssr.dump  matmul_ssr_frep.dump  unpred_jr_1.dump  unpred_jr_2.dump
banshee/tests/matmul/: data.S  gen_data.py  main.c
hw/system/occamy/sw/: .gitignore  CMakeLists.txt  Makefile  occamy.ld  snRuntime.mk  snitch.ld  toolchain-gcc.cmake
sw/applications/: CMakeLists.txt  README.md  data_gen.py  dram_preloading.py  requirements.txt
sw/applications/data/: .gitignore  batchnorm_params.hjson  conv2d_params.hjson  data_batchnorm.h  data_conv2d.h  data_fp32_nnlinear.h  data_fusedconv.h  data_gemm.h  data_maxpool.h  fusedconv_params.hjson  gelu_params.hjson  gemm_params.hjson  layernorm_params.hjson  linear_params.hjson  maxpool_params.hjson  nnlinear_baseline_params.hjson
sw/applications/include/: layer.h  network.h
sw/applications/src/: dma_perf.c  fusedconv.c  net_batchnorm.c  net_conv2d.c  net_fusedconv.c  net_gelu.c  net_gemm.c  net_layernorm.c  net_linear.c  net_maxpool.c  net_nnlinear_baseline.c  net_softmax.c
sw/applications/src/kernels/: batchnorm.c  batchnorm.h  conv2d.c  conv2d.h  gelu.h  gemm.c  gemm.h  layernorm.h  linear.h  maxpool.c  nnlinear_baseline.h  softmax.h
sw/applications/src/layers/: batchnorm_layer.c  batchnorm_layer.h  conv2d_layer.c  conv2d_layer.h  gelu_layer.c  gelu_layer.h  layernorm_layer.c  layernorm_layer.h  linear_layer.c  linear_layer.h  maxpool_layer.c  maxpool_layer.h  nnlinear_backend_baseline.c  nnlinear_backend_baseline.h  softmax_layer.c  softmax_layer.h
sw/applications/src/utils/: banshee.sh  utils.c  utils.h
sw/banshee/: CHANGELOG.md  Cargo.toml  Makefile  README.md
sw/banshee/config/: external_tcdm.yaml  mempool.yaml  multi_cluster_periph.yaml  multi_cluster_simple.yaml  periphs_test.yaml  snitch_cluster.yaml
sw/banshee/doc/: peripheral.adoc
sw/banshee/flexfloat/: .gitignore  Cargo.toml  README.md  build.rs
sw/banshee/flexfloat/src/: bindings.rs  lib.rs  main.rs
sw/banshee/src/: bootroms.rs  configuration.rs  dram_preload.rs  engine.rs  main.rs  memory.rs  periph_conf.rs  peripherals.rs  riscv.rs  softfloat.rs  tran.rs  util.rs
sw/banshee/src/runtime/: common.rs  jit.ll  jit.rs  mod.rs
sw/banshee/tests/: Makefile  atomics.c  barrier.c  dotp_ssr_frep.c  dotp_ssr_frep.h  dummy.s  ext_tcdm.c  far_jump.s  fcvt.c  fmv.c  frep_multi_use.c  frep_multiple.c  frep_single.c  frep_stagger.c  fsqrt.c  large_lfsr.c  loads.s  matmul_baseline.c  matmul_ssr_frep.c  mulh.c  multi_cluster.s  multi_cluster_periph.c  multi_core.s  periphs.c  sdma_simple.c  sdma_single_tcdm.c  spmm_issr_frep.c  spmm_issr_frep.h  spmv_issr_frep.c  spmv_issr_frep.h  spmv_issr_frep_kernels.h  spvv_issr_frep.c  spvv_issr_frep.h  ssr_3dm.c  ssr_inst_check.c  ssr_multi_use.c  ssr_push.c  unpred_jr_2.s  wfi.c
sw/banshee/tests/args/: atomics  barrier  (+6 more)
sw/benchmark/: CMakeLists.txt
sw/benchmark/include/: benchmark.h
sw/benchmark/src/: benchmark.c
sw/examples/: CMakeLists.txt  README.md  hello_world.c  memory.c  openmp.c
sw/snBLAS/: CMakeLists.txt  README.md
sw/snBLAS/include/: axpy.h  knn.h  knn_data.h  snblas.h
sw/snBLAS/scripts/: gen_data_knn.py
sw/snBLAS/src/: axpy.c  knn.c
sw/snBLAS/tests/: simple.c
sw/snRuntime/: CMakeLists.txt  README.md  base.ld  toolchain.cmake
sw/snRuntime/api/: alloc_decls.h  cls_decls.h  cluster_interrupt_decls.h  global_interrupt_decls.h  memory_decls.h  riscv_decls.h  start_decls.h  sync_decls.h  team_decls.h
sw/snRuntime/include/: debug.h  dm.h  dma.h  eu.h  interface.h  kmp.h  occamy_base_addr.h  occamy_hbm_xbar_peripheral.h  occamy_quad_peripheral.h  occamy_soc_peripheral.h  omp.h  perf_cnt.h  snitch_cluster_peripheral.h  snitch_hero_support.h  snrt.h  team.h
sw/snRuntime/link/: banshee.ld  common.ld  common.ld.in
sw/snRuntime/src/: alloc.c  alloc.h  barrier.c  cls.c  cls.h  cluster_interrupts.c  cluster_interrupts.h  dm.c  dm.h  dma.c  dma.h  global_interrupts.c  global_interrupts.h  interrupt.c  memcpy.c  perf.c  perf_cnt.c  perf_cnt.h  printf.c  printf.h  riscv.h  ssr.c  ssr.h  ssr_v1.c  ssr_v2.c  ssr_v3.c  start.S  start.c  start_banshee.S  start_banshee.c  start_billywig.S  start_cluster.S  start_cluster.c  start_hero.c  start_lethifold.S  start_occamy.S  start_occamy.c  start_thestral.S  sync.c  sync.h  (+2 more)
sw/snRuntime/tests/: barrier.c  data.h  dma_simple.c  event_unit.c  fence_i.c  fp16_comparison_scalar.c  fp16_comparison_vector.c  fp16_computation_scalar.c  fp16_computation_vector.c  fp16_vector_comparisons.c  fp16alt_comparison_scalar.c  fp16alt_comparison_vector.c  fp16alt_computation_scalar.c  fp16alt_computation_vector.c  fp16alt_vector_comparisons.c  fp32_comparison_scalar.c  fp32_comparison_vector.c  fp32_computation_scalar.c  fp32_computation_vector.c  fp32_conversions_scalar.c  fp32_vector_comparisons.c  fp64_conversions_scalar.c  fp8_comparison_scalar.c  fp8_comparison_vector.c  fp8_computation_scalar.c  fp8_computation_vector.c  fp8alt_comparison_scalar.c  fp8alt_comparison_vector.c  fp8alt_computation_scalar.c  fp8alt_computation_vector.c  interrupt-local.c  interrupt.c  lto.c  lto_a.h  multi_cluster.c  openmp.c  perf.c  perf_cnt.c  printf_fmtint.c  printf_simple.c  (+6 more)
(+1687 files in other folders)
