[package]
name = "banshee"
version = "0.2.0"
authors = ["Florian Zaruba <zarubaf@iis.ee.ethz.ch>", "Fabian Schuiki <fschuiki@iis.ee.ethz.ch>"]
description = "Emulates a Snitch system using dynamic LLVM JIT binary translation."
edition = "2018"
build = "build/build.rs"

[dependencies]
anyhow = "1"
byteorder = "1.3"
clap = "2"
crossbeam-utils = "0.8"
elf = "0.0.10"
itertools = "0.9"
llvm-sys = "100"
log = { version = "0.4", features = ["release_max_level_info"] }
pretty_env_logger = "0.4"

[build-dependencies]
cc = "1.0"
