# Copyright 2020 ETH Zurich and University of Bologna.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "banshee"
version = "0.5.0"
authors = ["Florian Zaruba <zarubaf@iis.ee.ethz.ch>", "Fabian Schuiki <fschuiki@iis.ee.ethz.ch>"]
description = "Emulates a Snitch system using dynamic LLVM JIT binary translation."
edition = "2018"
build = "build/build.rs"

[dependencies]
anyhow = "1"
byteorder = "1.3"
clap = "2"
crossbeam-utils = "0.8"
elf = "0.0.10"
itertools = "0.9"
llvm-sys = "100"
log = { version = "0.4", features = ["release_max_level_info"] }
pretty_env_logger = "0.4"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.63"

[build-dependencies]
cc = "1.0"
