# Copyright 2020 ETH Zurich and University of Bologna.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "banshee"
version = "0.5.0"
authors = ["Florian Zaruba <zarubaf@iis.ee.ethz.ch>", "Fabian Schuiki <fschuiki@iis.ee.ethz.ch>"]
description = "Emulates a Snitch system using dynamic LLVM JIT binary translation."
edition = "2018"
build = "build/build.rs"

[dependencies]
anyhow = "1"
binread = "2.2.0"
bytebuffer = "0.2.1"
byteorder = "1.4.3"
clap = "2"
crossbeam-utils = "0.8"
csv = "1.0.0-beta.2"
elf = "0.0.10"
flexfloat = { path = "flexfloat" }
itertools = "0.9"
llvm-sys = "120"
log = { version = "0.4", features = ["release_max_level_info"] }
pest = "2.1.3"
pest_derive = "2.1.0"
pretty_env_logger = "0.4"
rev_slice = "0.1.5"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.63"
serde_yaml = "0.8"
termion = "*"
thiserror = "1.0.21"
to-binary = "0.4.0"

[build-dependencies]
cc = "1.0"
